force-app/main/default/objects/RA_Request_to_B2B__c/RA_Request_to_B2B__c.object-meta.xml
<CustomObject>
    <label>RA Request to B2B</label>
    <nameField>
        <label>RA Request to B2B  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RA Request to B2B</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>