force-app/main/default/objects/RA_Request_to_B2B__c/fields/Administrative_change__c.field-meta.xml
<CustomField>
    <fullName>Administrative_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administrative change</label>
    <type>Checkbox</type>
</CustomField>