force-app/main/default/objects/RA_Request_to_B2B__c/fields/Analytical_procedure__c.field-meta.xml
<CustomField>
    <fullName>Analytical_procedure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytical procedure</label>
    <type>Checkbox</type>
</CustomField>