force-app/main/default/objects/RA_Request_to_B2B__c/fields/Attach_Documents__c.field-meta.xml
<CustomField>
    <fullName>Attach_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach Documents</label>
    <type>Checkbox</type>
</CustomField>