force-app/main/default/objects/RA_Request_to_B2B__c/fields/B2B_Response__c.field-meta.xml
<CustomField>
    <fullName>B2B_Response__c</fullName>
    <label>B2B Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>