force-app/main/default/objects/RA_Request_to_B2B__c/fields/Increase_in_batch_size__c.field-meta.xml
<CustomField>
    <fullName>Increase_in_batch_size__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Increase in batch size</label>
    <type>Checkbox</type>
</CustomField>