force-app/main/default/objects/RA_Request_to_B2B__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Others</label>
    <type>Checkbox</type>
</CustomField>