force-app/main/default/objects/RA_Request_to_B2B__c/fields/Process_Change__c.field-meta.xml
<CustomField>
    <fullName>Process_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Change</label>
    <type>Checkbox</type>
</CustomField>