force-app/main/default/objects/RA_Request_to_B2B__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>RA Request to B2B</relationshipLabel>
    <relationshipName>RA_Request_to_B2B</relationshipName>
    <type>Lookup</type>
</CustomField>