force-app/main/default/objects/RA_Request_to_B2B__c/fields/Requested_Documents__c.field-meta.xml
<CustomField>
    <fullName>Requested_Documents__c</fullName>
    <label>Requested Documents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>