force-app/main/default/objects/RA_Request_to_B2B__c/fields/Response_from_customer__c.field-meta.xml
<CustomField>
    <fullName>Response_from_customer__c</fullName>
    <label>Response from customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>