force-app/main/default/objects/RA_Request_to_B2B__c/fields/Site_Change__c.field-meta.xml
<CustomField>
    <fullName>Site_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Change</label>
    <type>Checkbox</type>
</CustomField>