force-app/main/default/objects/RA_Request_to_B2B__c/fields/Specification_Change__c.field-meta.xml
<CustomField>
    <fullName>Specification_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specification Change</label>
    <type>Checkbox</type>
</CustomField>