force-app/main/default/objects/RA_Request_to_B2B__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed by B2B</fullName>
            </value>
            <value>
                <fullName>Closed By RA</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>