force-app/main/default/objects/RA_Request_to_B2B__c/fields/Vendor_Change__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Change</label>
    <type>Checkbox</type>
</CustomField>